--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,10 @@ ol {
   text-decoration-thickness: 1px;
 }
 
+.search-form__label:hover .search-form__label-text:active {
+  text-decoration-line: none;
+}
+
 .search-form__textfield {
   inline-size: 225px;
   border-top: 1px solid #fff;
@@ -121,6 +125,13 @@ ol {
   background-color: transparent;
   appearance: none;
 
+  color: #fff;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+}
+
+.search-form__textfield::placeholder {
   color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
   font-weight: inherit;
@@ -150,14 +161,21 @@ ol {
   margin-right: 5px;
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+.search-form__pseudo-checkbox::before {
   content: "";
-  display: block;
   background-color: #fff;
   inline-size: 15px;
   block-size: 15px;
   margin-top: 1px;
   margin-left: 1px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  display: block;
+}
+
+.search-form__checkbox:active + .search-form__pseudo-checkbox::before {
+  display: block;
 }
 
 .button {
@@ -190,6 +208,7 @@ ol {
 
 .button:active {
   background: #545050;
+  text-decoration-line: none;
 }
 
 .search-form__submit-button {
@@ -230,7 +249,7 @@ ol {
 }
 
 .content__card-link:hover {
-  text-decoration: underline;
+  text-decoration-line: underline;
   text-underline-position: under;
 }
 
@@ -245,6 +264,7 @@ ol {
 
 .content__card-link:active {
   background-color: #545050;
+  text-decoration-line: none;
 }
 
 .content__card-link_current {
@@ -253,8 +273,9 @@ ol {
 
 .content__list {
   overflow: auto;
-  height: 298px;
   position: relative;
+  block-size: 298px;
+  inline-size: 399px;
 }
 
 .content__list-item:not(:last-child) {
